--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -6,7 +6,7 @@
   <div class="brands-explore-advance-search">
     <form action="<%= explores_path %>" role="form" class="vertical" method="get">
       <div class="row">
-        <div class="pull-left explore-adv-search">
+        <div class="col-md-6 col-sm-6 col-xs-10">
           <p>ADVANCED SEARCH</p>
         </div>
         <div class="pull-left">
