move fetching insights into cron job
allow users to manually refresh but otherwise should improve load times
of pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,7 +124,7 @@
               </a>
             </li>
 
-            <li class="<%= (params[:controller] == 'facebook' && params[:action] == 'insights') ? 'active' : '' %> load-page">
+            <li class="<%= (params[:controller] == 'facebook' && params[:action] == 'insights') ? 'active' : '' %>">
               <a href="<%= insights_facebook_index_path %>">
                 <i class="fa fa-facebook"></i><span class="space-sidebar">FACEBOOK</span>
               </a>
