--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -16,6 +16,14 @@
         <%= button_tag 'VIEW', class: 'btn btn-campaign-view button-border-yellow' %>
     <% end %>
   </div>
+
+  <p class="text-right">
+    Last updated: <%= @account.insights_updated_at.strftime('%B %d, %Y %l:%M %P') %>
+    <a href="javascript:" onclick="window.location='?id=<%= @account.id %>&refresh=1'">
+      <%= image_tag asset_path('Refresh_icon.png') %>
+    </a>
+  </p>
+
   <div class="br-container">
     <!-- Info boxes -->
     <div class="row info-box-container">
