--- a/app/views/profile/show_user.js.erb
+++ b/app/views/profile/show_user.js.erb
@@ -1,2 +1,1 @@
-$('#profile-modal').html("<%= j render(:partial => 'profile/read_only_profile_modal', :locals => { user: @user}) %>");
-$('#show-readonly-user-profile').modal('show');
+$('.global-profile-container').html("<%= j render(:partial => 'profile/read_only_profile_modal', :locals => { user: @user}) %>");
