--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -211,6 +211,7 @@
 <%= render partial: 'shared/profile_image_upload', locals: { user: current_user } %>
 <%= render partial: 'shared/profile_image_crop', locals: { user: current_user }%>
 <div class="loader"></div>
+<div class="global-profile-container"></div>
 </body>
 </html>
 
