--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -54,6 +54,10 @@
                   <div class="tab-content responsive social-account-tab-content font-raleway">
                     <% influencer.active_facebook_accounts.each do |account| %>
                         <div id="fb_<%= account.id %>" class="tab-pane">
+
+                          <%= render 'facebook/page_insights', account: account %>
+                          <br/>
+
                           <div class="form-group">
                             <div class="col-md-6 col-sm-9 col-xs-12">
                               <%= label_tag :status_update_cost, 'Status Update' %>
