--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag 'responsive-tabs' %>
+<%= stylesheet_link_tag 'brands-explore' %>
 
 <div class="modal fade modal-profile" id="show-readonly-user-profile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog influencer-profile-modal" role="document">
