--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -119,6 +119,9 @@
                   <div class="tab-content responsive social-account-tab-content font-raleway">
                   <% user.active_facebook_accounts.each do |account| %>
                         <div id="fb_<%= account.id %>" class="tab-pane">
+                          <%= render 'facebook/page_insights', account: account %>
+                          <br/>
+
                           <div class="form-group">
                             <div class="col-md-6 col-sm-9 col-xs-12">
                               <%= label_tag :status_update_cost, 'Status Update' %>
