Social Accounts Pricing Section responsive design added Testing 4

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -400,4 +400,8 @@ div.awesomplete > ul > li {
     .social-account-tabs input {
         width: 34%;
     }
+
+    .social-account-tabs .form-group {
+        margin-right: 10%;
+    }
 }
