--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -1,6 +1,6 @@
 <script type="text/x-handlebars" id="add-facebook-account-template">
     <div class="modal fade" id="AddFacebookAccount" role="dialog">
-      <div class="modal-dialog">
+      <div class="modal-dialog add-fb-modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
