1. Checkbox design change in Manage Account modal 2. Manage Account Modal Partially Responsive

--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -21,7 +21,7 @@
                           <div class="media-body media-middle">
                             <h4 class="media-heading">{{name}}</h4>
                           </div>
-                          <div class="media-right media-middle">
+                          <div class="media-right media-middle squaredFour">
                             <input type="checkbox" name="accounts[]" value="{{id}}" {{#if selected}}checked{{/if}}>
                           </div>
                         </div>
