fix awesomplete init params

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -147,10 +147,7 @@
   <script>
       $(document).ready(function () {
           var industry_list = document.getElementById("industry_list");
-          var Industries = new Awesomplete(industry_list, {minChars: 0, sort: true, filter: function (text, input) {
-              return text.indexOf(input) === 0;
-             }
-          });
+          var Industries = new Awesomplete(industry_list, {minChars: 0, sort: String.localeCompare, filter: Awesomplete.FILTER_STARTSWITH});
           Industries.list = <%= raw(@industries) %>;
 
           $('#industry_list').on('focus', function() {
