1. New Contact Us Category Table Made 2. Seed data added for Category Table 3. Show data w.r.t table in Contact us page

--- a/app/views/profile/contact_us.html.erb
+++ b/app/views/profile/contact_us.html.erb
@@ -13,7 +13,7 @@
 
         <div class="get-in-touch-category">
           <%= f.label :category, 'Category', class: 'category-name display-inline' %>
-          <%= f.select :category, options_for_select(Category.all.order(:name).pluck(:name)),
+          <%= f.select :category, options_for_select(ContactUsCategory.all.order(:name).pluck(:name)),
                        {}, { :class => 'category-list display-inline' } %>
         </div>
 
