add brand invitation  basic functionality  make global success alert that take hash generating success alert  refactor global profile show modal contain to modal container

--- a/app/views/admin/invitations/create.js.erb
+++ b/app/views/admin/invitations/create.js.erb
@@ -1,2 +1,5 @@
 $('#invitation-modal').modal('hide');
+$('.modal-container').html("<%= j render(:partial => 'shared/success_message',
+           :locals => { message: influencer_invitation_success_message }) %>");
+
 $('.invitation-table tbody').append("<%= j render @invitation  %>");
