--- a/app/views/profile/show_user.js.erb
+++ b/app/views/profile/show_user.js.erb
@@ -1,1 +1,1 @@
-$('.global-profile-container').html("<%= j render(:partial => 'profile/read_only_profile_modal', :locals => { user: @user}) %>");
+$('.modal-container').html("<%= j render(:partial => 'profile/read_only_profile_modal', :locals => { user: @user}) %>");
