--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,19 +35,14 @@
       <div class="admin-sidebar-top-space"></div>
       <ul class="sidebar-menu">
         <% if policy(:admin).manage_brandreach? %>
-            <li class="<%= current_path profile_admin_admins_path %>">
-              <a href="<%= profile_admin_admins_path %>">
-                <span class="space-sidebar">Profile</span>
+            <li class="<%= current_path brand_invitation_admin_invitations_path %>">
+              <a href="<%= brand_invitation_admin_invitations_path %>">
+                <span class="space-sidebar">Brand Invite </span>
               </a>
             </li>
             <li class="<%= current_path brands_request_admin_admins_path %>">
               <a href="<%= brands_request_admin_admins_path %>">
-                <span class="space-sidebar">Brands Request</span>
-              </a>
-            </li>
-            <li class="<%= current_path influencer_list_admin_admins_path  %>">
-              <a href="<%= influencer_list_admin_admins_path %>">
-                <span class="space-sidebar">Influencers</span>
+                <span class="space-sidebar">Brand Request</span>
               </a>
             </li>
             <li class="<%= current_path brand_list_admin_admins_path %>">
@@ -57,20 +52,28 @@
             </li>
             <li class="<%= current_path admin_invitations_path %>">
               <a href="<%= admin_invitations_path %>">
-                <span class="space-sidebar">Influencer Invitations</span>
+                <span class="space-sidebar">Influencer Invite</span>
               </a>
             </li>
-            <li class="<%= current_path brand_invitation_admin_invitations_path %>">
-              <a href="<%= brand_invitation_admin_invitations_path %>">
-                <span class="space-sidebar">Brand Invitations</span>
+            <li class="<%= current_path influencer_list_admin_admins_path %>">
+              <a href="<%= influencer_list_admin_admins_path %>">
+                <span class="space-sidebar">Active Influencers</span>
               </a>
             </li>
         <% end %>
 
         <% if policy(:admin).manage_admins? %>
-            <li class="<%= current_path create_brand_invitation_admin_invitations_path %>">
-              <a href="<%= create_brand_invitation_admin_invitations_path %>">
+            <li class="<%= current_path manage_admins_admin_admins_path %>">
+              <a href="<%= manage_admins_admin_admins_path %>">
                 <span class="space-sidebar">Admins</span>
+              </a>
+            </li>
+        <% end %>
+
+        <% if policy(:admin).manage_brandreach? %>
+            <li class="<%= current_path profile_admin_admins_path %>">
+              <a href="<%= profile_admin_admins_path %>">
+                <span class="space-sidebar">Account Setup</span>
               </a>
             </li>
         <% end %>
@@ -81,7 +84,7 @@
   <div class="content-wrapper">
     <section class="header-content">
       <div class="row">
-          <%= image_tag('Logo.png', :class => 'image img-responsive header-logo display-inline-block', :alt => 'Logo') %>
+        <%= image_tag('Logo.png', :class => 'image img-responsive header-logo display-inline-block', :alt => 'Logo') %>
         <div class="about-welcome">
           <p class=" welcome"> Welcome
             back, <%= current_user.try(:full_name).present? ? current_user.full_name : 'USER' %>!</p>
