--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -15,102 +15,126 @@
         <%= form_for bank_account, url: bank_accounts_path, html: { class: 'form-horizontal bank-account-modal'}, remote: true do |f| %>
 
             <div class="row">
-              <div class="col-md-4 bank_location">Bank and Location</div>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :bank_name, 'Bank Name' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :bank_name, maxlength: 100, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :address, 'Address' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :address, maxlength: 150, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :city, 'City' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :city, maxlength: 50, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :state, 'State/Region' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :state, maxlength: 50, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :zip, 'ZIP/Postal Code' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :zip, maxlength: 30, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :country, 'Country' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.country_select :country, {priority: %w(US CA IN)}, { :class => 'bank-account-country'}, {} %>
+              <div class="col-sm-4 bank_location">Bank and Location</div>
             </div>
 
             <div class="row">
-              <div class="col-md-4 bank_location">Account Details</div>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :account_name, 'Account Name' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :account_name, maxlength: 50, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :account_number, 'Account Number' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :account_number, maxlength: 50, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :currency, 'Currency' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :currency, maxlength: 50, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :routing_number, 'Routing Number' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :routing_number, maxlength: 50, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :bic, 'BIC (Swift Code)' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :bic, maxlength: 30, size: 20 %>
-            </div>
-
-            <div class="col-md-4">
-              <%= f.label :iban, 'IBAN' %>
-            </div>
-            <div class="col-md-8">
-              <%= f.text_field :iban, maxlength: 30, size: 20 %>
-            </div>
-
-            <div class="row remove-both-margin">
-              <div class="col-md-4">
-                <%= f.button  'SAVE', class: 'btn btn-withdraw btn-save-account' %>
+              <div class="col-sm-4">
+                <%= f.label :bank_name, 'Bank Name' %>
               </div>
-              <div class="col-md-8">
+              <div class="col-sm-8">
+                <%= f.text_field :bank_name, maxlength: 100, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :address, 'Address' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :address, maxlength: 150, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :city, 'City' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :city, maxlength: 50, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :state, 'State/Region' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :state, maxlength: 50, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :zip, 'ZIP/Postal Code' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :zip, maxlength: 30, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :country, 'Country' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.country_select :country, {priority: %w(US CA IN)}, { :class => 'bank-account-country'}, {} %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4 bank_location">Account Details</div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :account_name, 'Account Name' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :account_name, maxlength: 50, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :account_number, 'Account Number' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :account_number, maxlength: 50, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :currency, 'Currency' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :currency, maxlength: 50, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :routing_number, 'Routing Number' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :routing_number, maxlength: 50, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :bic, 'BIC (Swift Code)' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :bic, maxlength: 30, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <%= f.label :iban, 'IBAN' %>
+              </div>
+              <div class="col-sm-8">
+                <%= f.text_field :iban, maxlength: 30, size: 20 %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4 text-align-right">
+                <%= f.button  'SAVE', class: 'btn btn-save-account' %>
+              </div>
+              <div class="col-sm-8">
                 <%= link_to 'CANCEL', '', class: 'btn btn-close', 'data-dismiss' => 'modal', 'aria-hidden' => 'true' %>
               </div>
             </div>
