--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -3,7 +3,7 @@
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
   <td>
-    <% if user.verified? %>
+    <% if user.active? %>
         <a href="javascript:;" class="text-red  text-danger deactivate-user" data-id="<%= user.id %>">
           <h5>DEACTIVATE</h5>
         </a>
