--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -42,7 +42,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <span class="profile-item">Iindustry</span>
+              <span class="profile-item">Industry</span>
               <span class="profile-value"><%= user.industry %></span>
 
             </div>
