--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -1,7 +1,13 @@
 <% title 'Active Brands' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="admin-header">Active Brands</h1>
+  <h1 class="admin-header display-inline-block">Active Brands</h1>
+  <%= form_tag brand_list_admin_admins_path	, :method => 'get', class: 'display-inline-block' do %>
+      <p>
+        <%= text_field_tag :email, params[:email], placeholder: 'Filter by email' %>
+        <%= submit_tag 'Search', :name => nil %>
+      </p>
+  <% end %>
   <table class="table table-responsive admin-table">
     <thead>
     <tr>
