--- a/app/views/admin/admins/brands_request.html.erb
+++ b/app/views/admin/admins/brands_request.html.erb
@@ -1,7 +1,13 @@
 <% title 'Brand Requests' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="admin-header">Brand Requests</h1>
+  <h1 class="admin-header display-inline-block">Brand Requests</h1>
+  <%= form_tag brands_request_admin_admins_path, :method => 'get', class: 'display-inline-block' do %>
+      <p>
+        <%= text_field_tag :email, params[:email], placeholder: 'Filter by email' %>
+        <%= submit_tag 'Search', :name => nil %>
+      </p>
+  <% end %>
   <table class="table table-responsive admin-table">
     <thead>
     <tr>
