add date column to brand & influencer invitation table

--- a/app/views/admin/invitations/_invitation.html.erb
+++ b/app/views/admin/invitations/_invitation.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= invitation.first_name %></td>
   <td><%= invitation.last_name %></td>
+  <td><%= invitation.time %></td>
   <td><%= invitation.email %></td>
 </tr>
