--- a/app/views/admin/invitations/_invited_brand.html.erb
+++ b/app/views/admin/invitations/_invited_brand.html.erb
@@ -2,5 +2,6 @@
   <td><%= brand.first_name %></td>
   <td><%= brand.last_name %></td>
   <td><%= brand.email %></td>
+  <td><%= brand.time %></td>
   <td><%= link_to 'Re-invited', resend_admin_invitation_path(brand), remote: true %></td>
 </tr>
