--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -13,7 +13,7 @@
             <%= image_tag(influencer.profile_picture, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
           </div>
 
-          <div class="display-inline-block">
+          <div class="display-inline-block influencer-modal-details">
             <h4 class="font-raleway"><%= influencer.full_name %></h4>
             <p class="title font-raleway"> <%= influencer.industry %> </p>
             <p class="influencer-address font-raleway"> <%= influencer.location %></p>
