--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <p class="text-right">
-    Last updated: <%= @account.insights_updated_at.strftime('%B %d, %Y %l:%M %P') %>
+    Last updated: <%= @account.insights_updated_at.try(:strftime,'%B %d, %Y %l:%M %P') %>
     <a class="load-page" href="javascript:" onclick="window.location='?id=<%= @account.id %>&refresh=1'">
       <%= image_tag asset_path('Refresh_icon.png') %>
     </a>
