--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -15,6 +15,7 @@
       <th>Last Name</th>
       <th>Email</th>
       <th>Date</th>
+      <th>Change Password</th>
       <th>Action</th>
     </tr>
     </thead>
