--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,6 +2,7 @@
 
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper">
   <h2>Forgot your password?</h2>
+  <%= render partial: 'shared/flash_messages', flash: flash %>
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), data: {:'parsley-validate' => ''}, html: { method: :post }) do |f| %>
       <%= devise_error_messages! %>
