--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -22,7 +22,7 @@
         <div class="form-group">
           <div class="col-md-6">
             <%= f.label :first_name, 'First Name' %>
-            <%= f.text_field :first_name, maxlength: 20 %>
+            <%= f.text_field :first_name, maxlength: 20, required: true %>
           </div>
           <div class="col-md-6">
             <%= f.label :last_name, 'Last Name' %>
