--- a/app/assets/stylesheets/awesomplete.css
+++ b/app/assets/stylesheets/awesomplete.css
@@ -53,18 +53,18 @@ div.awesomplete > ul:empty {
 
 	/* Pointer */
 	div.awesomplete > ul:before {
-		content: "";
-		position: absolute;
-		top: -.43em;
-		left: 1em;
-		width: 0; height: 0;
-		padding: .4em;
-		background: white;
-		border: inherit;
-		border-right: 0;
-		border-bottom: 0;
-		-webkit-transform: rotate(45deg);
-		transform: rotate(45deg);
+		/*content: "";*/
+		/*position: absolute;*/
+		/*top: -.43em;*/
+		/*left: 1em;*/
+		/*width: 0; height: 0;*/
+		/*padding: .4em;*/
+		/*background: white;*/
+		/*border: inherit;*/
+		/*border-right: 0;*/
+		/*border-bottom: 0;*/
+		/*-webkit-transform: rotate(45deg);*/
+		/*transform: rotate(45deg);*/
 	}
 
 	div.awesomplete > ul > li {
