--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -13,9 +13,9 @@
                   <p class="title"> <%= influencer.industry.present? ? influencer.industry : 'Entrepreneur' %></p>
                   <p class="influencer-biography"><%= truncate(influencer.short_bio, length: 100) %> </p>
                   <p>
-                    <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;<%= influencer.max_followers %>
+                    <%= image_tag('explore-followers.png', :alt => 'number-of-follower') %> &nbsp;<%= influencer.max_followers %>
                   </p>
-                  <p>Pages: <%= influencer.facebook_accounts.count %></p>
+                  <p> <%= image_tag('explore_page.png', :alt => 'number-of-pages') %> &nbsp;<%= influencer.facebook_accounts.count %></p>
                 </div>
                 <%= link_to 'VIEW PROFILE', influencer_path(influencer), remote: true, :class => 'btn btn-primary btn-view-profile' %>
               </div>
