add home path to all brandreach log

--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -2,9 +2,9 @@
   <td><%= user.first_name %></td>
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
-  <td><%= user.time %></td>user-password-change-modal
+  <td><%= user.time %></td>
   <td>
-    <a href="javascript:;" class="text-success user-password-change" data-id="<%= user.id %>">
+    <a href="javascript:;" class="text-success user-password-change" data-id="<%= user.email %>">
     <h5>Change Password</h5>
     </a>
   </td>
