--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -50,3 +50,11 @@ table {
 .admin-table{
   margin-bottom: 0;
 }
+
+.admin-search-form input{
+  height: 30px;
+}
+
+.admin-search-form input[type=text]{
+  width: 200px;
+}
