--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -2,7 +2,7 @@
 
 <div class="admin-page-wrapper">
   <h1 class="admin-header display-inline-block">Active Brands</h1>
-  <%= form_tag brand_list_admin_admins_path	, :method => 'get', class: 'display-inline-block' do %>
+  <%= form_tag brand_list_admin_admins_path	, :method => 'get', class: 'admin-search-form display-inline-block' do %>
       <p>
         <%= text_field_tag :email, params[:email], placeholder: 'Filter by email' %>
         <%= submit_tag 'Search', :name => nil %>
