--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -8,12 +8,12 @@
   </div>
   <br/>
   <h1 class="admin-header display-inline-block">Invitations</h1>
-  <%= form_tag admin_invitations_path, :method => 'get', class: 'display-inline-block' do %>
-      <p>
+
+  <%= form_tag admin_invitations_path, :method => 'get', class: 'admin-search-form display-inline-block' do %>
         <%= text_field_tag :email, params[:email], placeholder: 'Filter by email' %>
         <%= submit_tag 'Search', :name => nil %>
-      </p>
   <% end %>
+
   <table class="table table-responsive admin-table invitation-table">
     <thead>
     <tr>
