add re-invite button to influencer invitation move admin section search form to right link brandreach log to home page

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -51,6 +51,11 @@ table {
   margin-bottom: 0;
 }
 
+.admin-search-form{
+  float: right;
+  margin-top: 25px;
+}
+
 .admin-search-form input{
   height: 30px;
 }
