--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -19,8 +19,9 @@
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
-      <th>Date</th>
       <th>Email</th>
+      <th>Date</th>
+      <th>Action</th>
     </tr>
     </thead>
     <tbody>
